--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Hola</h1>
+<% if user_signed_in?%>
+  <h1>Hello <%= current_user.email.match /^.*(?=@)/ %></h1>
+<% else %>
+  <h3>Send us your request or <%= link_to 'Sign In', new_user_session_path %></h3>
+<% end %>
