--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,2 +1,32 @@
-<h1>Tickets#new</h1>
-<p>Find me in app/views/tickets/new.html.erb</p>
+<div class="col-md-10 col-md-offset-2">
+<%= form_for :ticket, html: { class: 'form-horizontal' }  do |f| %>
+
+  <div class="form-group col-md-4">
+    <%= f.label :assignee_id %>:
+    <%= f.text_field :assignee_id, class: 'form-control' %>
+  </div>
+
+  <div class="form-group col-md-4">
+    <%= f.label :reporter_id %>:
+    <%= f.text_field :reporter_id, class: 'form-control' %>
+  </div>
+
+  <div class="form-group col-md-12">
+    <%= f.label :subject %>:
+    <%= f.text_field :subject, class: 'form-control' %>
+  </div>
+
+  <div class="form-group col-md-12">
+    <%= f.label :description %>
+    <%= f.text_field :description, class: 'form-control' %>
+    <div class="form-group col-md-2">
+      <%= f.label :status %>
+      <%= f.select(:status_id, options_for_select([['New', 0], ['Open'], ['Waiting', 2], ['Solved', 3], ['Closed', 4]]), {}, {class: "form-control"}) %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit class: 'btn btn-primary' %>
+  </div>
+<% end %>
+</div>
