--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,12 @@
       </div>
     </div>
   </nav>
-    <%= yield %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12" role="main">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
