--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-group col-md-4">
     <%= f.label :assignee_id %>:
-    <%= f.text_field :assignee_id, class: 'form-control' %>
+    <%= f.text_field :assignee_id, as: :search, class: 'form-control', data: { autocomplete_source: User.pluck(:email) } %>
   </div>
 
   <div class="form-group col-md-4">
@@ -18,15 +18,15 @@
 
   <div class="form-group col-md-12">
     <%= f.label :description %>
-    <%= f.text_field :description, class: 'form-control' %>
+    <%= f.text_area :description, class: 'form-control', row: 4 %>
     <div class="form-group col-md-2">
       <%= f.label :status %>
       <%= f.select(:status_id, options_for_select([['New', 0], ['Open'], ['Waiting', 2], ['Solved', 3], ['Closed', 4]]), {}, {class: "form-control"}) %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-primary' %>
+  <div class="form-group col-md-2">
+    <%= f.submit class: 'btn btn-primary form-control' %>
   </div>
 <% end %>
 </div>
