--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -23,6 +23,13 @@
           <%= f.submit class: 'btn btn-primary' %>
       </div>
     </div>
+      <%= fields_for @ticket do |tf| %>
+        <div class="form-group col-md-2">
+          <%= tf.label :status_id %>
+          <%= tf.select(:status_id, options_for_select(@ticket.statuses.map.with_index{|i, v| [i, v]}), {:value => @ticket.status_id, class: "form-control"})
+            %>
+        </div>
+      <% end %>
     <% end %>
   </div>
   <div class="panel-footer">
