--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,11 +1,25 @@
-<h1>Tickets#index</h1>
-<p>Find me in app/views/tickets/index.html.erb</p>
-
 <% if @tickets %>
-<ul>
+<table class="table table-striped table-hover ">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Reporter</th>
+      <th>Subject</th>
+      <th>Asignee</th>
+      <th>Created</th>
+    </tr>
+  </thead>
   <% @tickets.each do |t| %>
-    <li><%= link_to "#{t.id} - #{t.subject}", action: 'show', id: t.id %></li>
+  <tbody>
+    <tr data-link="<%= ticket_path(t) %>">
+      <td><%= t.id %></td>
+      <td><%= t.reporter.try(:email) || "-" %></td>
+      <td><%= t.subject %></td>
+      <td><%= t.assignee.try(:email) || "-"  %></td>
+      <td><%= t.created_at %></td>
+    </tr>
+  </tbody>
   <% end %>
-</ul>
-
+<% else %>
+<h2><small>No tickets in this view</small></h2>
 <% end %>
