--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-10 col-md-offset-2">
-<%= form_for :ticket, html: { class: 'form-horizontal' }  do |f| %>
+<%= form_for @ticket, html: { class: 'form-horizontal' }  do |f| %>
 
   <div class="form-group col-md-4">
     <%= f.label :assignee_id %>:
