--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,12 @@
       </div>
     </div>
   </nav>
+  <% if flash[:error] -%>
+  <div class="alert alert-dismissible alert-error">
+    <button type="button" class="close" data-dismiss="alert">&close;</button>
+    <p><%= flash[:error] %></p>
+  </div>
+  <% end %>
   <% if flash[:notice] -%>
   <div class="alert alert-dismissible alert-warning">
     <button type="button" class="close" data-dismiss="alert">&close;</button>
